Cambios a estilo e inicio nuevas páginas

--- a/calc.html
+++ b/calc.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/css.css" rel="stylesheet" type="text/css">
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">    
     <title>Hackathon</title>
 </head>
 <body>
-    <header class="hero">
+    <header class="hero2">
         <div class="container">
             <nav class="nav">
             <a href="index.html" class="nav__item">Inicio</a>
@@ -18,14 +17,7 @@
             <a href="login.html" class="nav__item nav__item--cta">Iniciar Sesión</a>
             <a href="register.html" class="nav__item nav__item--cta">Registrarse</a>
             </nav>
-            <section class="hero__container">
-                <div class="hero__texts">
-                    <h1 class="hero__title">Herramienta de liquidación</h1>
-                    <h2 class="hero__subtitle">Pasión por el servicio</h2>
-                </div>
-            </section>
         </div>
-        <div class="hero__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
 
     <main>
