--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/css.css" rel="stylesheet" type="text/css">
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">
+     <link href="estilos/media.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
 </head>
 <body>
