Actualización a las páginas de liquidación

--- a/calc.html
+++ b/calc.html
@@ -55,13 +55,14 @@
                             <h2 class="testimony__name2">LIQUIDACIÓN DEFINITIVA</h2>
                             <br>
                             <p class="testimony__verification2">Escoja esta opción si desea hacer la liquidación
-                                de los saldos a pagar por salarios y prestaciones al momento del retiro de sus
-                                empleados
+                                de los saldos a pagar por salarios y prestaciones al momento del retiro de su(s)
+                                empleado(s)
                             </p>
                         </div>
                     </article>
                 </a>                
             </div>
+        </section>
     </main>
 
     <footer class="footer">
