Corrección de errores

--- a/definitiva.html
+++ b/definitiva.html
@@ -68,7 +68,8 @@
 
                     <!-- Aquí va código para sacar la lista de un archivo -->
 
-                </select>
+                </select><br>
+                <br>
 
                 <label for="afp">Administradora de Pensiones</label>
                 <select name="afp" id="afp">
@@ -76,7 +77,8 @@
 
                     <!-- Aquí va código para sacar la lista de un archivo -->
 
-                </select>
+                </select><br>
+                <br>
 
                 <label for="cesantias">Administradora de Cesantías</label>
                 <select name="cesantias" id="cesantias">
@@ -84,13 +86,15 @@
 
                     <!-- Aquí va código para sacar la lista de un archivo -->
 
-                </select>
+                </select><br>
+                <br>
 
                 <label for="start">Fecha de Inicio de Contrato</label>
                 <input type="date" id="start" name="start" required>
                 
                 <label for="finish">Fecha de Finalización de Contrato</label>
-                <input type="date" id="finish" name="finish" required>
+                <input type="date" id="finish" name="finish" required><br>
+                <br>
 
                 <label for="reason">Motivo del Retiro</label>
                 <select name="motivo" id="reason">
@@ -99,6 +103,8 @@
                     <option value="without">Despido sin justa causa</option>
                     <option value="end">Finalización de contrato</option>
                     <option value="voluntary">Retiro voluntario</option>
+                    <option value="pension">Pensión</option>
+                    <option value="deceased">Fallecimiento</option>
                 </select><br>
                 <br>
 
