--- a/prestaciones.html
+++ b/prestaciones.html
@@ -72,7 +72,8 @@
 
                     <!-- Aquí va código para sacar la lista de un archivo -->
 
-                </select>
+                </select><br>
+                <br>
 
                 <label for="afp">Administradora de Pensiones</label>
                 <select name="afp" id="afp">
@@ -80,7 +81,8 @@
 
                     <!-- Aquí va código para sacar la lista de un archivo -->
 
-                </select>
+                </select><br>
+                <br>
 
                 <h3>Devengos mes a mes dentro del semestre (no aplica para vacaciones)</h3><br>
                 <br>
