--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
     <link href="estilos/media.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="img/icon.svg">
 </head>
 <body>
     
@@ -22,8 +23,8 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Herramienta de liquidación</h1>
-                    <h2 class="hero__subtitle">Pasión por el servicio</h2>
+                    <h1 class="hero__title">Bienvenido</h1>
+                    <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
         </div>
@@ -31,12 +32,12 @@
     </header>
     <main>
         <section class="presentation container">
+            <br>
+            <br>
             <h2 class="subtitle">Somos el grupo numero 23</h2>
-            <p>Tripulantes que han culminado la MisionTIC y que ahora presentan su proyecto para la Hackathon</p>
         </section>
 
         <section class="testimony container">
-            <h2 class="subtitle">Nosotros</h2>
             <div class="testimony__grid">
                 <article class="testimony__item">
                     <div class="testimony__person">
@@ -84,17 +85,28 @@
                 </article>
             </div>
         </section>
-        <section class="presentation container">
+        <section class="presentation container gg">
+            <br>
             <h2 class="subtitle">Problemática</h2>
-            <p>Trabajo Decente y Crecimiento Económico</p>
+            <p class="ink">1. Empleados y jovenes nuevos en el mundo laboral son victimas de injusticias o abusos por no conocer sus garantias y derechos laborales.</p>
+            <br>
+            <p class="ink">2. Muchas pequeñas o nuevas empresas sin un software de pago especializado, llevan a cabo procesos tediosos y largos para poder realizar la liquidacion laboral de cada uno de sus empleados</p>
+            <br>
+            <br>
         </section>
         <br>
         <br>
-        <br>
-        <section class="presentation container">
+        <section class="presentation container gg">
+            <br>
             <h2 class="subtitle">Propuesta de solución</h2>
-            <p>Software de liquidación de nómina</p>
-        </section>
+            <p class="ink">En el marco del reto “Trabajo Decente y Crecimiento Económico”, nos proponemos presentar una solución en la forma de una aplicación web que permita realizar la liquidación de una nómina cumpliendo todos los requisitos de la legislación colombiana, ademas vamos a promover el acceso a sus derechos como tabajador.</p>
+            <br>
+            <p class="ink">Consiste en una aplicación web completamente gratuita con una guía sobre los derechos laborales y el paso a paso para la liquidación de nómina y de acceso a todas las personas en Colombia que estén iniciando sus emprendimientos y/o empresas ya establecidas de menos de cinco (5) trabajadores, y así contribuir en la etapa de inicio y/o maduración del negocio a superar la barrera económica y normativa que muchas veces frena la formalización del empleo.
+
+               <br><br> Se pretende tener una interfaz amigable e intuitiva que le permita a cualquier persona, sin importar si conoce o no de derecho laboral, poder hacer buen uso, aprender, y sacar provecho de la herramienta. <br><br> Por ultimo nos gustaria agregar que tenemos muchas ideas en mente para la resolucion de las problematicas anteriormente mencionadas, sin embargo al no poder ejecutarlas en este momento debido a falta de fondos y de tiempo, agradecemos su espera.</p>
+               <br>
+               <br>
+            </section>
         <br>
         <br>
         <br>
@@ -106,9 +118,9 @@
             <nav class="footer__contact">
                 <h3 class="footer__title"></h3>
                 <div class="footer__icons">
-                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon" href="contacto.html"></a></span>
-                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" href="https://github.com/JonarcasDev/hackaton"></a></span>
-                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" href="contacto.html"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon"target="_blank" href="https://wa.me/573013931555"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" target="_blank" href="https://github.com/JonarcasDev/hackaton"></a></span>
+                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" target="_blank"href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=jonaellol12@gmail.com&subject="></a></span>
 
                 </div>
 
