--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/css.css" rel="stylesheet" type="text/css">
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">
-      <link href="estilos/media.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
+    <link rel="shortcut icon" href="img/icon.svg">
 </head>
 <body>
     
@@ -22,15 +22,17 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Herramienta de liquidación</h1>
-                    <h2 class="hero__subtitle">Pasión por el servicio</h2>
+                    <h1 class="hero__title">Descubre ahora!</h1>
+                    <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
         </div>
         <div class="hero__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
     <main>
-        <section class="presentation container">
+        <section class="presentation container gg">
+            <br>
+            <br>
             <h2 class="subtitle">Iniciar Sesión</h2>
             <p>Por favor digite sus credenciales correctamente</p>
             <br>
@@ -42,8 +44,12 @@
                     <br>
             <input type="submit" value="Enviar">
             </form>
+            <br>
+            <br>
+            <br>
+            <br>
         </section>
-
+<br><br>
     
 
     <footer class="footer">
@@ -52,10 +58,9 @@
             <nav class="footer__contact">
                 <h3 class="footer__title"></h3>
                 <div class="footer__icons">
-                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon" href="contacto.html"></a></span>
-                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" href="https://github.com/JonarcasDev/hackaton"></a></span>
-                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" href="contacto.html"></a></span>
-
+                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon"target="_blank" href="https://wa.me/573013931555"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" target="_blank" href="https://github.com/JonarcasDev/hackaton"></a></span>
+                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" target="_blank"href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=jonaellol12@gmail.com&subject="></a></span>
                 </div>
 
             </nav>
