--- a/nomina.html
+++ b/nomina.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/css.css" rel="stylesheet" type="text/css">
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">    
-      <link href="estilos/media.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
+    <link rel="shortcut icon" href="img/icon.svg">
 </head>
 <body>
-    <header class="hero2">
+    <header class="hero">
         <div class="container">
             <nav class="nav">
             <a href="index.html" class="nav__item">Inicio</a>
@@ -19,12 +19,11 @@
             <a href="register.html" class="nav__item nav__item--cta">Registrarse</a>
             </nav>
         </div>
+        <div class="hero__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
 
-<!-- TODOS LOS DATOS QUE SE INGRESEN Y LOS CALCULOS QUE SE HAGAN DEBEN SER LOCALES Y QUE NO SE TRANSMITAN A NINGUNA PARTE -->
-
     <main>
-        <section class="start container">
+        <section class="start container gg">
             <h3 class="subtitle">NÓMINA PERIÓDICA</h3>
             <form action="#" method="#">
                 <h2>DATOS DEL EMPLEADOR</h2><br>
@@ -132,6 +131,7 @@
                 <input type="button" id="btn-exit" value="SALIR">
             </form>
         </section>
+        <br>
     </main>
 
     <footer class="footer">
@@ -140,10 +140,9 @@
             <nav class="footer__contact">
                 <h3 class="footer__title"></h3>
                 <div class="footer__icons">
-                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon" href="contacto.html"></a></span>
-                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" href="https://github.com/JonarcasDev/hackaton"></a></span>
-                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" href="contacto.html"></a></span>
-
+                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon"target="_blank" href="https://wa.me/573013931555"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" target="_blank" href="https://github.com/JonarcasDev/hackaton"></a></span>
+                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" target="_blank"href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=jonaellol12@gmail.com&subject="></a></span>
                 </div>
 
             </nav>
