--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilos/css.css" rel="stylesheet" type="text/css">
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">
-     <link href="estilos/media.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
+    <link rel="shortcut icon" href="img/icon.svg">
 </head>
 <body>
     
@@ -22,24 +22,60 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Herramienta de liquidación</h1>
-                    <h2 class="hero__subtitle">Pasión por el servicio</h2>
+                    <h1 class="hero__title">Contáctanos</h1>
+                    <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
+
         </div>
         <div class="hero__wave" style="overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
     <main>
-        <section class="presentation container">
-            <h2 class="subtitle">Contáctanos</h2>
-            <p>Correo electrónico : Jonaellol12@gmail.com</p>
+        <section class="presentation container gg">
+            <br>
+            <h2 class="subtitle">Buzon de contácto:</h2>
+            <br>
+            <div class="c-md-12">
+                <div class="share">
+                    <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=jonaellol12@gmail.com&subject=" target="_blank" class="gmail">Gmail</a>
+                    <a href="https://wa.me/573013931555" target="_blank" class="whatsapp">Whats App</a>
+                    
+                </div>
             <br>
             <br>
-            <p>Whatsapp (Atención 24/7) : +57 301 393 15 55 </p>
+            <br>
+            <h2 class="subtitle">Recuerda compartirnos por tus redes sociales!</h2>
             <br>
             <br>
+            <div class="c-md-12">
+                <div class="share">
+                    <a href="https://api.whatsapp.com/send?text=www.mipagina.com" target="_blank" class="whatsapp">Whatsapp</a>
+                    <a href="http://www.facebook.com/sharer.php?u=www.mipagina.com&t=pagina de desarrollo web" target="_blank" class="facebook">Facebook</a>
+                    <a href="https://twitter.com/intent/tweet?text=MIEpresa&url=www.mipagina.com&via=Empresa&hashtags=#miempresa" target="_blank" class="twitter">Twitter</a>
+                </div>
+            <br><br><br>
+            <h2 class="subtitle">Dejanos tus comentarios!</h2>
+            <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://hackathon-4.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </section>
-
+<br><br>
 
     <footer class="footer">
         <div class="wave2" style=" overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 271.49,-49.98 500.00,49.98 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg></div>
@@ -47,9 +83,9 @@
             <nav class="footer__contact">
                 <h3 class="footer__title"></h3>
                 <div class="footer__icons">
-                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon" href="contacto.html"></a></span>
-                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" href="https://github.com/JonarcasDev/hackaton"></a></span>
-                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" href="contacto.html"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-whatsapp footer__icon"target="_blank" href="https://wa.me/573013931555"></a></span>
+                    <span class="footer__container-icons"><a class="fab fa-github footer__icon" target="_blank" href="https://github.com/JonarcasDev/hackaton"></a></span>
+                    <span class="footer__container-icons"><a class="fas fa-envelope-open-text footer__icon" target="_blank"href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=jonaellol12@gmail.com&subject="></a></span>
 
                 </div>
 
