--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="estilos/normalize.css" rel="stylesheet" type="text/css">
     <title>Hackathon</title>
     <link href="estilos/media.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/icon.svg">
+    <link rel="shortcut icon" href="img/icon.svg">
 </head>
 <body>
     
