--- a/contacto.html
+++ b/contacto.html
@@ -49,23 +49,15 @@
             <br>
             <div class="c-md-12">
                 <div class="share">
-                    <a href="https://api.whatsapp.com/send?text=www.mipagina.com" target="_blank" class="whatsapp">Whatsapp</a>
-                    <a href="http://www.facebook.com/sharer.php?u=www.mipagina.com&t=pagina de desarrollo web" target="_blank" class="facebook">Facebook</a>
-                    <a href="https://twitter.com/intent/tweet?text=MIEpresa&url=www.mipagina.com&via=Empresa&hashtags=#miempresa" target="_blank" class="twitter">Twitter</a>
+                    <a href="https://api.whatsapp.com/send?text=https://jonarcasdev.github.io/hackaton/login.html" target="_blank" class="whatsapp">Whatsapp</a>
+                    <a href="http://www.facebook.com/sharer.php?u=https://jonarcasdev.github.io/hackaton/login.html" target="_blank" class="facebook">Facebook</a>
+                    <a href="https://twitter.com/intent/tweet?text=MIEpresa&url=https://jonarcasdev.github.io/hackaton/login.html" target="_blank" class="twitter">Twitter</a>
                 </div>
             <br><br><br>
             <h2 class="subtitle">Dejanos tus comentarios!</h2>
             <div id="disqus_thread"></div>
 <script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
+
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
     s.src = 'https://hackathon-4.disqus.com/embed.js';
