--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
             <h2 class="subtitle">Iniciar Sesión</h2>
             <p>Por favor digite sus credenciales correctamente</p>
             <br>
-            <form name="formulario" method="post" action="https://jonarcasdev.github.io/hackaton/calc.html">
+            <form name="formulario" method="post">
             
                         <!-- Correo electronico -->
                 Correo electronico:<br>
@@ -48,9 +48,10 @@
                 <input type="password" name="pass" placeholder="Contraseña"
                        minlength="11" required />
 <br><br>
-                       <input type="submit" name="pass" placeholder="Enviar"
-                        required />
+                      <!--  <input type="submit" name="pass" placeholder="Enviar" required />-->
+                     <!--  <a href="calc.html"><button>Ingresar</button></a> -->
             </form> 
+            <a href="calc.html"><button>Ingresar</button></a>
             <br>
             <br>
             <br>
