--- a/calc.html
+++ b/calc.html
@@ -20,7 +20,7 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Herramientas</h1>
+                    <h1 class="hero__title">Bienvenido</h1>
                     <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
