Correción de errores

--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
     <main>
         <section class="presentation container gg">
             <br>
-            <h2 class="subtitle">Buzon de contácto:</h2>
+            <h2 class="subtitle">Buzón de contacto:</h2>
             <br>
             <div class="c-md-12">
                 <div class="share">
@@ -44,7 +44,7 @@
             <br>
             <br>
             <br>
-            <h2 class="subtitle">Recuerda compartirnos por tus redes sociales!</h2>
+            <h2 class="subtitle">¡Recuerda compartirnos por tus redes sociales!</h2>
             <br>
             <br>
             <div class="c-md-12">
@@ -54,7 +54,7 @@
                     <a href="https://twitter.com/intent/tweet?text=MIEpresa&url=https://jonarcasdev.github.io/hackaton/login.html" target="_blank" class="twitter">Twitter</a>
                 </div>
             <br><br><br>
-            <h2 class="subtitle">Dejanos tus comentarios!</h2>
+            <h2 class="subtitle">¡Déjanos tus comentarios!</h2>
             <div id="disqus_thread"></div>
 <script>
 
