Corrección de errores

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Descubre ahora!</h1>
+                    <h1 class="hero__title">¡Descubre ahora!</h1>
                     <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
