--- a/servicio.html
+++ b/servicio.html
@@ -22,7 +22,7 @@
             </nav>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__title">Descubre ahora!</h1>
+                    <h1 class="hero__title">¡Descubre ahora!</h1>
                     <h2 class="hero__subtitle"></h2>
                 </div>
             </section>
